--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,22 @@ a:hover {
   color: #535bf2;
 }
 
+
+  
+  .wrapper {
+  background-color: #fff9e6;
+  padding: 15px;
+  border-radius: 10px;
+  }
+  
+  h1 {
+  color: #8873be;
+  }
+
 body {
   margin: 0;
+  background-color: #b4a7d6;
+  font-family: Arial, Helvetica, sans-serif;
   display: flex;
   place-items: center;
   min-width: 320px;
