--- a/src/index.css
+++ b/src/index.css
@@ -22,17 +22,13 @@ a:hover {
   color: #535bf2;
 }
 
-
-  
   .wrapper {
   background-color: #fff9e6;
   padding: 15px;
   border-radius: 10px;
+  margin: 0 auto;
   }
   
-  h1 {
-  color: #8873be;
-  }
 
 body {
   margin: 0;
@@ -42,11 +38,16 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  /* font-family: fantasy; */
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #8873be;
+  padding: 0.6em 0;
+  font-family: fantasy;
+
 }
 
 button {
@@ -61,7 +62,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #101011;
 }
 button:focus,
 button:focus-visible {
@@ -74,9 +75,44 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #0f0f10;
   }
   button {
     background-color: #f9f9f9;
   }
 }
+
+.transparent-icon {
+  opacity: 0.2;
+}
+
+.popup-message {
+  position: fixed;
+  top: 40%;
+  left: 60%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255,249,230, 0.6);
+  border: 1px solid rgba(204, 204, 204); 
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+}
+
+
+@keyframes slideIn {
+  from {
+      opacity: 0;
+      transform: translate(-50%, 50%);
+  }
+  to {
+      opacity: 1;
+      transform: translate(-50%, 0);
+  }
+}
+
+.todo-item {
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
