--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,18 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
+.logo, .logo-alt {
+  /* height: 6em; */
+  /* padding: 1.5em; */
   will-change: filter;
   transition: filter 300ms;
 }
-.logo:hover {
+/* .logo:hover, .logo-alt:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
-.logo.react:hover {
+.logo.react:hover, .logo-alt.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
-}
+} */
 
 @keyframes logo-spin {
   from {
@@ -27,14 +27,32 @@
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@keyframes logo-alt-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(-360deg);
   }
 }
 
-.card {
-  padding: 2em;
+.logo {
+  animation: logo-spin infinite 20s linear;
+}
+
+.logo-alt {
+  animation: logo-alt-spin infinite 20s linear;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo, a:nth-of-type(2) .logo-alt {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
