--- a/src/index.css
+++ b/src/index.css
@@ -22,22 +22,31 @@ a:hover {
   color: #535bf2;
 }
 
-  .wrapper {
+  .wrapper1 {
   background-color: #fff9e6;
   padding: 15px;
+  margin: 30% auto 0;
   border-radius: 10px;
-  margin: 0 auto;
+  display: flex;
+  place-items: center;
+  flex-direction: column;
   }
+
+  .wrapper {
+    background-color: #fff9e6;
+    padding: 15px;
+    border-radius: 10px;
+    margin: 0 auto;
+    }
   
 
 body {
   margin: 0;
   background-color: #b4a7d6;
   font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  padding-bottom: 60px;
   /* font-family: fantasy; */
 }
 
@@ -47,18 +56,18 @@ body {
   left: 0;
   width: 100%; /* Adjust as needed */
   height: 100%; /* Adjust as needed */
-  background-image: url('assets/dreamygirl.webp');
   background-size: cover; /* Adjust as needed */
   /* Add other styles as needed */
 }
 
 
 h1 {
-  font-size: 3.2em;
+  font-size: 8vw;
   line-height: 1.1;
   color: #8873be;
-  padding: 0.6em 0;
+  padding: 1.0em 0;
   font-family: fantasy;
+
 
 }
 
@@ -128,3 +137,19 @@ button:focus-visible {
   padding: 10px;
 }
 
+
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 80%;
+  display: flex;
+  /* justify-content: space-around; */
+  padding: 20px;
+}
+
+.btn-home {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%); /* Offset the button by half its width to the left */
+}
