--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,8 @@ a:hover {
 
   .wrapper1 {
   background-color: #fff9e6;
-  padding: 15px;
-  margin: 30% auto 0;
+  padding: 1em;
+  margin: 8% auto 0;
   border-radius: 10px;
   display: flex;
   place-items: center;
@@ -34,7 +34,7 @@ a:hover {
 
   .wrapper {
     background-color: #fff9e6;
-    padding: 15px;
+    padding: 5px;
     border-radius: 10px;
     margin: 0 auto;
     }
@@ -43,33 +43,26 @@ a:hover {
 body {
   margin: 0;
   background-color: #b4a7d6;
-  font-family: Arial, Helvetica, sans-serif;
-  min-width: 320px;
+  min-width: 2mem;
   min-height: 100vh;
-  padding-bottom: 60px;
-  /* font-family: fantasy; */
+  padding-bottom: 3.75em;
 }
 
 .overlay-image {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%; /* Adjust as needed */
-  height: 100%; /* Adjust as needed */
-  background-size: cover; /* Adjust as needed */
-  /* Add other styles as needed */
+  width: 100%; 
+  height: auto; 
+  background-size: cover; 
 }
 
 
 h1 {
-  font-size: 8vw;
-  line-height: 1.1;
-  color: #8873be;
+  font-size: 3em;
+  /* color: #8873be; */
   padding: 1.0em 0;
-  font-family: fantasy;
-
-
-}
+font-family: fantasy;}
 
 button {
   border-radius: 8px;
@@ -109,15 +102,24 @@ button:focus-visible {
 
 .popup-message {
   position: fixed;
-  top: 40%;
-  left: 60%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgba(255,249,230, 0.6);
   border: 1px solid rgba(204, 204, 204); 
-  padding: 20px;
-  border-radius: 10px;
+  padding: 1.25em;
+  border-radius: 0.625em;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
 }
+
+@media (max-width: 600px) { /* Add a media query for smaller screens */
+  .popup-message {
+    top: 50%; /* Adjust the position on smaller screens */
+    left: 50%; /* Adjust the position on smaller screens */
+    padding: 1em; /* Adjust the padding on smaller screens */
+  }
+}
+
 
 
 @keyframes slideIn {
@@ -134,22 +136,37 @@ button:focus-visible {
 .todo-item {
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 1em; /* Change to a relative unit */
 }
 
+@media (max-width: 600px) { /* Add a media query for smaller screens */
+  .todo-item {
+    padding: 0.5em; /* Adjust the padding on smaller screens */
+  }
+}
 
-.navbar {
+@media (max-width: 600px) {
+  .navbar {
+  /* flex-direction: column; */
   position: fixed;
   top: 0;
   width: 80%;
   display: flex;
   /* justify-content: space-around; */
   padding: 20px;
-}
+}}
 
-.btn-home {
+
+/* .btn-home {
   position: fixed;
-  bottom: 20px;
+  bottom: 3.0em;
   left: 50%;
-  transform: translateX(-50%); /* Offset the button by half its width to the left */
-}
+  transform: translateX(-50%)
+} */
+
+
+  /* .header {
+    display: flex;
+    align-items: center; /* Optional: Aligns items vertically in the center */
+    /* gap: 10px; Optional: Adds some space between the h6 and the image */
+   */
